@@ -5,6 +5,7 @@ Changes for 1.3.3.2
 -Added an ability to change sound setup (sample rate, channels, sample format, and the buffer size) via the [sound] INI section
 -Optimized the work of a lazy-decompression algorithm workflow
 -At credits, the bible quote has been replaced with a meme
+-Fixed the vanilla bug: free-falling platforms getting confused when the player changes their power-up state
 
 Changes for 1.3.3.1
 -Fixed a crash, caused by the incremental locked warps counter that leads BGO array exciting
